--- a/style.css
+++ b/style.css
@@ -3,6 +3,33 @@
         margin: 0;
         font-family: 'Montserrat', sans-serif;
       }
+
+      #pre{
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        background-color: rgb(19, 18, 31);
+        z-index: 999;
+      }
+      #logo{
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    
+    #logo path{
+        stroke-dasharray: 900px;
+        stroke-dashoffset: 1000px;
+        animation: line-anim 5s ease forwards;
+    }
+    
+    @keyframes line-anim{
+        to{
+            stroke-dashoffset: 0;
+        }
+    }
+    
       .container{
         color: white;
         background-color: #19beff;
