--- a/style.css
+++ b/style.css
@@ -112,6 +112,7 @@
         font-size: 18px;
         margin-top: 15px;
         margin-bottom: 15px;
+        text-align: center;
       }
       #countryImg{
         display: block;
@@ -200,6 +201,16 @@
   h1{
 font-size: 35px;
   }
+
+  #logo{
+    width: 200px;
+  }
+
+  #info{
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+
   #buttonDiv{
     display: block;
     justify-content: center;
@@ -222,7 +233,7 @@ font-size: 35px;
 
   #getip{
     display: block;
-    width: 100%;
+    width: 50%;
     padding: 10px 10px;
     margin: auto;
     margin-top: 20px;
