--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,6 +2,7 @@
         padding: 0px;
         margin: 0;
         font-family: 'Montserrat', sans-serif;
+        text-decoration: none;
   }
 
       #pre{
@@ -161,18 +162,24 @@
         box-shadow: 0px 0px 4px black;
         letter-spacing: 1px;
         font-weight: 400;
-        margin-right: 15px;
-        margin-left: 15px;
+        display: block;
+        margin-top: 20px;
+        margin-right: auto;
+        margin-left: auto;
+        
 }
 
 #ipaddress{
   width: 100%;
   font-size: 18px;
   padding: 12px 20px;
-  margin: 8px 0px 70px 0px;
+  margin: 8px 0px 50px 0px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;  
+}
+form{
+  width: 400px;
 }
 
 .getip:hover{  
@@ -195,6 +202,10 @@
   h1{
 font-size: 35px;
   }
+  form{
+    width: 250px;
+  }
+
 
   #logo{
     width: 200px;
@@ -229,9 +240,10 @@ font-size: 35px;
   #getip{
     display: block;
     width: auto;
-    padding: 10px 10px;
+    padding: 15px 25px;
     margin-top: 20px;
     order: 2;
+    font-size: large;
   }
 
   #back{
@@ -241,4 +253,11 @@ font-size: 35px;
     margin-top: 20px;
     order: 1;
   }
+}
+
+@media only screen and (max-height: 300px){
+  .card{
+    display: none;
+  }
+
 }
